Added Repository test case for all & Added Service test case for student & superhero entity